<resources>
    <string name="app_name">Ruta Móvil</string>
    <string name="not_long_in">no se puede iniciar sesion</string>
    <string name="not_firebase_auth">no se puede autenticar con firebase</string>
    <string name="firebase_auth">usted se Authentico con firebase</string>
    <string name="not_close_session">No se pudo iniciar sesion</string>
    <string name="salir">Salir</string>

    <!--Catalogo-->
    <string name="action_settings">Settings</string>
    <string name="action_add_favourite">Add to Favourites</string>
    <string name="action_play_next">Play Next</string>
    <string name="backdrop_title">LOVE MUSIC</string>
    <string name="backdrop_subtitle">This season top 20 albums</string>

    <!--Voz_Navigation-->
    <string name="reset_title">Reset</string>
    <string name="current_night_mode" translatable="false">current_night_mode</string>

    <!--Mapbox-->
    <string name="access_token" translatable="false">pk.eyJ1IjoiZWR3aW4tMjAxOSIsImEiOiJjanNlemtscnUweG1mNDV0MHNyMXQ0anJvIn0.1_wRGK8K9-arDPy_hG2Fsg</string>
    <string name="user_location_permission_explanation">This app needs location permissions to show its functionality.</string>
    <string name="user_location_permission_not_granted">No has concedido permisos de ubicación.</string>
    <string name="tracking_enabled">Seguimiento Localizado</string>
    <string name="tracking_already_enabled">Seguimiento ya habilitado. Mover el mapa</string>
    <string name="current_location">Lat: %1$f Long: %2$f</string>

    <!--Token-RA-->
    <string name="mapbox_access_token" translatable="false">sk.eyJ1IjoiZWR3aW4tMjAxOSIsImEiOiJjanlwemhuODQxbDNtM2RvOWdwdzJ4eTZhIn0.E2EnzgjU6cqLapmL6jYvcQ</string>

    <string name="navigation_guidance_day" translatable="false">mapbox://styles/mapbox/navigation-guidance-day-v4</string>
    <string name="navigation_guidance_night" translatable="false">mapbox://styles/mapbox/navigation-guidance-night-v4</string>

    <string name="blue" translatable="false">#4264fb</string>
    <string name="new_location">Lat:%s long:%s</string>
    <string name="facebook_app_id">2370507446609173</string>
    <string name="fb_login_protocol_scheme">fb2370507446609173</string>
    <string name="cancel_login">Usted cancelo la operacion</string>
    <string name="error_login">Error al ingresar</string>

    <string name="Title_toolbar">Informacion</string>

    <!--Nombre de estilo de Mapa-->
    <string name="menu_map_style_streets">Mapa con Calles</string>
    <string name="menu_map_style_dark">Mapa a Oscura</string>
    <string name="menu_map_style_light">Mapa Simple</string>
    <string name="menu_map_style_outdoors">Mapa aire libre</string>
    <string name="menu_map_style_satellite">Satellite</string>
    <string name="menu_map_style_satellite_streets">Satellite con Calles</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
